[package]
name = "loganalyzer"
version = "0.1.0"
authors = ["Marcin Grzywaczewski <killavus@gmail.com>"]
edition = "2018"
description = "Small utility to show logs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
argh = "0.1"
log = "0.4"
pretty_env_logger = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
